--- a/example.env
+++ b/example.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://innosufiyan:innosufiyan@cluster0.y1k2qqh.mongodb.net/
+MONGO_URI=
 JWT_SECRET_KEY=Matilda
 
 MAILTRAPHOST=sandbox.smtp.mailtrap.io
@@ -7,3 +7,5 @@ MAILTRAPUSERNAME=e441180adec941
 MAILTRAPPASSWORD=10ff9aaf80b3ce
 PASSWORD=
 EMAIL=
+PORTAL_PASSWORD=
+PORTAL_EMAIL=innosufiyan@gmail.com
